--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "private": true,
   "dependencies": {
     "@meshtastic/meshtasticjs": "^0.3.1",
-    "@types/node": "^12.0.0",
+    "@types/node": "^14.14.8",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "autoprefixer": "^10.0.2",
+    "postcss": "^8.1.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.3",
     "react-json-pretty": "^2.2.0",
     "react-scripts": "4.0.0",
+    "tailwindcss": "^2.0.1",
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "start": "npm run watch:css && react-scripts start",
-    "build": "npm run watch:css && react-scripts build",
-    "watch:css": "postcss src/tailwind.css -o src/main.css",
+    "build:tailwind": "tailwindcss build src/tailwind.css -o src/main.css",
+    "prestart": "npm run build:tailwind",
+    "prebuild": "npm run build:tailwind",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,9 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "autoprefixer": "9.8.6",
-    "postcss-cli": "^8.3.0",
-    "tailwindcss": "^1.9.6"
-  }
+  "devDependencies": {}
 }
